# nodes_and_dots

./: .gitattributes  README.md  print_dir_structure.py  program.ps1
cpp/: CMakeLists.txt  dependencies.d  deps.d
cpp/src/objects/: Graph.hpp  Ships.cpp  Ships.hpp  Structures.cpp  Structures.hpp
cpp/src/rendering/: Render.cpp  Render.hpp  RenderEdges.cpp  RenderNodes.cpp  RenderNodes.hpp  RenderShips.cpp  RenderShips.hpp  RenderStructures.cpp  RenderStructures.hpp
cpp/src/utils/: Distance.hpp  InsideCircle.cpp  InsideCircle.hpp
docs/: Doxyfile  conf.py  index.rst
docs/_autosummary/: test.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/doxygen/html/: _c_make_c_x_x_compiler_id_8cpp.html  _distance_8cpp.html  _distance_8cpp__incl.dot  _distance_8hpp.html  _distance_8hpp__dep__incl.dot  _distance_8hpp__incl.dot  _distance_8hpp_source.html  _graph_8cpp.html  _graph_8cpp__incl.dot  _graph_8hpp.html  _graph_8hpp__dep__incl.dot  _graph_8hpp__incl.dot  _graph_8hpp_source.html  _inside_circle_8cpp.html  _inside_circle_8cpp__incl.dot  _inside_circle_8hpp.html  _inside_circle_8hpp__dep__incl.dot  _inside_circle_8hpp_source.html  _render_8cpp.html  _render_8cpp__incl.dot  (+147 more)
game/settings/: edges.json  nodes.json  screen.json
game/src/: main.cpp
powershell/: build.ps1  clean.ps1  commit.ps1  deps.ps1  run.ps1  sshagent.ps1
python/: add_ssh_key.py  autodoc.py  deps.py  dir_structure.py  print_dir_structure.py  test.py
shell/: build.ps1  clean.ps1  commit.ps1  deps.ps1  run.ps1
(+130 files in other folders)
